--- a/src/App.css
+++ b/src/App.css
@@ -25,12 +25,36 @@
   justify-content: space-between;
 }
 
+.sec-dropdown select {
+  width: 150px;
+  padding: 8px;
+  font-size: 16px;
+}
+.sec-dropdown select option {
+  background-color: #f2f2f2;
+  color: #333;
+}
+
 .logo {
   color: #fff;
+  width: 80px;
+  display: flex;
+  align-items: center;
+  font-size: 40px;
+  font-weight: bold;
 }
-.header-login-btn button {
-  padding: 15px 30px;
-  border-radius: 10px;
+
+.logo img {
+  width: 100%;
+  margin: 15px;
+}
+
+.logo .header-login-btn button {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 30px;
 }
 
 /* Hero */
